--- a/build.gradle
+++ b/build.gradle
@@ -40,5 +40,8 @@ dependencies {
 
     //머스테치
     implementation('org.springframework.boot:spring-boot-starter-mustache')
+
+    //스프링시큐리티 : 소셜로그인등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 }
 
