--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,14 @@ dependencies {
 
     //스프링시큐리티 : 소셜로그인등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+    //h2-db tools
+    implementation('org.springframework.boot:spring-boot-devtools')
+
+    //
+    implementation('org.springframework.session:spring-session-jdbc')
+
+    //스프링시큐리티 테스트
+    testImplementation('org.springframework.security:spring-security-test')
 }
 
