--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,10 +1,13 @@
-language : java
+language: java
 jdk:
   - openjdk8
 
 branches: #Travis CI 를 어느 브랜치가 푸쉬될때 수행할지 지정
   only:
     - master
+
+before_install:
+  - chmod +x gradlew
 
 #Travis CI 서버의 home
 cache: #Gradle을 통해 의존성을 받게 되면 해당 디렉토리에 캐시해서
